HVAC Backup 2/objects/Survey_Question_Language__c.object
<CustomObject>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Marathi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Value__c</fullName>
        <label>Question Value</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Question Languages</relationshipLabel>
        <relationshipName>Survey_Question_Languages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Question Language</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQLN-{0000}</displayFormat>
        <label>Survey Question Language Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>